# echo-cancellation

./: Android.mk  Application.mk  CMakeLists.txt  README.md  release.sh
aec/: adp_filter_coeff.h  adp_filter_coeff_factor.c  adp_filter_coeff_factor.h  aec_config.h  aec_control.cc  aec_control.cc~  aec_control.h  aec_control.h~  aec_core.c  aec_core.c~  aec_core.h  aec_core.h~  aec_defines.h
aec/delay_estimator/: delay_estimator.c  delay_estimator.h  delay_estimator_internal.h  delay_estimator_wrapper.c  delay_estimator_wrapper.h
aec/post_process/: aec_post_net.c  aec_post_net.h  hanning_win.h  post_process_config.h  sqrt_hanning_win.h
app/: CMakeLists.txt  example.cc  test1.cc  test2.cc
subband/analy_synth/: filterbank.c  filterbank.h  filterbank_control.h
subband/prototype/: prototype_defines.h  prototype_filter.h
utility/fft/: bitrv2.c  bitrv2.h  bitrv2conj.c  bitrv2conj.h  cdft_8g.c  cdft_8g.h  fft_config.h  fft_wrapper.c  fft_wrapper.h  ft_ops.c  ft_ops.h  rdft_8g.c  rdft_8g.h  rdft_8g_init.c  rdft_8g_init.h  rdft_8g_make_table.c  rdft_8g_make_table.h
utility/log/: log.h
utility/math/: fast_math.h
utility/ringbuffer/: ring_buffer.c  ring_buffer.h
